# node-cpal

./: CHANGELOG  README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: funcs.rs  lib.rs
test/: functions.js
